@@ -9,8 +9,10 @@ AC_DEFUN([AM_ZLIB],
   zlibinc="-I\$(srcdir)/../zlib"
   AC_ARG_WITH(system-zlib,
   [AS_HELP_STRING([--with-system-zlib], [use installed libz])],
-  zlibdir=
-  zlibinc=
+  if test x$with_system_zlib = xyes ; then
+    zlibdir=
+    zlibinc=
+  fi
   )
   AC_SUBST(zlibdir)
   AC_SUBST(zlibinc)
